--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,36 +6,37 @@
   <title>Instagram Report Bot</title>
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;background:linear-gradient(135deg,#1a1a2e 0%,#16213e 100%);color:#fff;width:360px;min-height:400px;padding:16px}
-    .header{text-align:center;margin-bottom:16px;padding-bottom:12px;border-bottom:1px solid rgba(255,255,255,0.1)}
-    .header h1{font-size:18px;margin-bottom:4px;color:#22c55e}
-    .header p{font-size:11px;color:rgba(255,255,255,0.5)}
-    .status-card{background:rgba(255,255,255,0.05);border-radius:8px;padding:12px;margin-bottom:12px}
+    body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;background:#fff;color:#1a1a1a;width:360px;min-height:400px;padding:16px}
+    .header{text-align:center;margin-bottom:16px;padding-bottom:12px;border-bottom:2px solid #22c55e}
+    .header h1{font-size:20px;margin-bottom:4px;color:#22c55e}
+    .header p{font-size:11px;color:#666}
+    .status-card{background:#f8f8f8;border:1px solid #e0e0e0;border-radius:8px;padding:12px;margin-bottom:12px}
     .status-row{display:flex;justify-content:space-between;align-items:center;padding:6px 0}
-    .status-label{color:rgba(255,255,255,0.6);font-size:12px}
-    .status-value{font-weight:600;font-size:12px}
-    .ready{color:#22c55e}.not-ready{color:#ef4444}.running{color:#f59e0b}
+    .status-label{color:#555;font-size:12px;font-weight:500}
+    .status-value{font-weight:700;font-size:12px}
+    .ready{color:#22c55e}.not-ready{color:#dc2626}.running{color:#22c55e}
     .targets-section{margin-bottom:12px}
-    .targets-section h3{font-size:12px;color:rgba(255,255,255,0.6);margin-bottom:8px}
-    .targets-input{width:100%;height:120px;background:rgba(0,0,0,0.3);border:1px solid rgba(255,255,255,0.1);border-radius:6px;color:#fff;font-family:monospace;font-size:11px;padding:8px;resize:none}
+    .targets-section h3{font-size:12px;color:#555;margin-bottom:8px;font-weight:600}
+    .targets-input{width:100%;height:120px;background:#fff;border:2px solid #e0e0e0;border-radius:6px;color:#1a1a1a;font-family:monospace;font-size:11px;padding:8px;resize:none}
     .targets-input:focus{outline:none;border-color:#22c55e}
-    .targets-input::placeholder{color:rgba(255,255,255,0.3)}
+    .targets-input::placeholder{color:#999}
     .actions{display:flex;gap:8px;margin-bottom:12px}
-    .btn{flex:1;padding:10px 16px;border:none;border-radius:6px;font-size:13px;font-weight:600;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:6px;transition:opacity 0.2s}
-    .btn:disabled{opacity:0.5;cursor:not-allowed}
-    .btn-primary{background:#22c55e;color:#000}
-    .btn-danger{background:#ef4444;color:#fff}
+    .btn{flex:1;padding:12px 16px;border:none;border-radius:6px;font-size:13px;font-weight:700;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:6px;transition:all 0.2s;text-transform:uppercase;letter-spacing:0.5px}
+    .btn:disabled{opacity:0.4;cursor:not-allowed}
+    .btn:hover:not(:disabled){transform:translateY(-1px);box-shadow:0 4px 12px rgba(0,0,0,0.15)}
+    .btn-primary{background:#22c55e;color:#fff}
+    .btn-danger{background:#dc2626;color:#fff}
     .progress-section{margin-bottom:12px}
-    .progress-bar{height:6px;background:rgba(255,255,255,0.1);border-radius:3px;overflow:hidden}
-    .progress-fill{height:100%;background:#22c55e;width:0%;transition:width 0.3s}
-    .progress-text{font-size:11px;color:rgba(255,255,255,0.5);text-align:center;margin-top:4px}
+    .progress-bar{height:8px;background:#e0e0e0;border-radius:4px;overflow:hidden}
+    .progress-fill{height:100%;background:linear-gradient(90deg,#22c55e,#16a34a);width:0%;transition:width 0.3s}
+    .progress-text{font-size:12px;color:#555;text-align:center;margin-top:6px;font-weight:600}
     .results-section{max-height:150px;overflow-y:auto}
-    .result-item{display:flex;justify-content:space-between;padding:6px 8px;font-size:11px;border-radius:4px;margin-bottom:4px}
-    .result-item.success{background:rgba(34,197,94,0.2)}
-    .result-item.failed{background:rgba(239,68,68,0.2)}
-    .result-item.skipped{background:rgba(156,163,175,0.2)}
-    .result-item.processing{background:rgba(245,158,11,0.2)}
-    .warning{background:rgba(245,158,11,0.1);border:1px solid rgba(245,158,11,0.3);border-radius:6px;padding:10px;font-size:11px;color:#f59e0b;text-align:center;margin-bottom:12px}
+    .result-item{display:flex;justify-content:space-between;padding:8px 10px;font-size:11px;border-radius:4px;margin-bottom:4px;font-weight:500}
+    .result-item.success{background:#dcfce7;color:#166534;border:1px solid #bbf7d0}
+    .result-item.failed{background:#fee2e2;color:#991b1b;border:1px solid #fecaca}
+    .result-item.skipped{background:#f3f4f6;color:#374151;border:1px solid #e5e7eb}
+    .result-item.processing{background:#fff;color:#22c55e;border:1px solid #22c55e}
+    .warning{background:#fee2e2;border:2px solid #dc2626;border-radius:6px;padding:10px;font-size:11px;color:#dc2626;text-align:center;margin-bottom:12px;font-weight:600}
   </style>
 </head>
 <body>
