--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,12 +20,14 @@
     .targets-input{width:100%;height:120px;background:#fff;border:2px solid #e0e0e0;border-radius:6px;color:#1a1a1a;font-family:monospace;font-size:11px;padding:8px;resize:none}
     .targets-input:focus{outline:none;border-color:#22c55e}
     .targets-input::placeholder{color:#999}
-    .actions{display:flex;gap:8px;margin-bottom:12px}
-    .btn{flex:1;padding:12px 16px;border:none;border-radius:6px;font-size:13px;font-weight:700;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:6px;transition:all 0.2s;text-transform:uppercase;letter-spacing:0.5px}
+    .actions{display:flex;gap:8px;margin-bottom:12px;flex-wrap:wrap}
+    .btn{flex:1;min-width:100px;padding:12px 16px;border:none;border-radius:6px;font-size:13px;font-weight:700;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:6px;transition:all 0.2s;text-transform:uppercase;letter-spacing:0.5px}
     .btn:disabled{opacity:0.4;cursor:not-allowed}
     .btn:hover:not(:disabled){transform:translateY(-1px);box-shadow:0 4px 12px rgba(0,0,0,0.15)}
     .btn-primary{background:#22c55e;color:#fff}
+    .btn-secondary{background:#fff;color:#22c55e;border:2px solid #22c55e}
     .btn-danger{background:#dc2626;color:#fff}
+    .btn.hidden{display:none}
     .progress-section{margin-bottom:12px}
     .progress-bar{height:8px;background:#e0e0e0;border-radius:4px;overflow:hidden}
     .progress-fill{height:100%;background:linear-gradient(90deg,#22c55e,#16a34a);width:0%;transition:width 0.3s}
@@ -61,6 +63,7 @@
   </div>
   <div class="actions">
     <button class="btn btn-primary" id="start-btn" disabled><span>▶</span> Start</button>
+    <button class="btn btn-secondary hidden" id="resume-btn" disabled><span>↻</span> Resume</button>
     <button class="btn btn-danger" id="stop-btn" disabled><span>⏹</span> Stop</button>
   </div>
   <div class="progress-section">
