--- a/extension/popup.html
+++ b/extension/popup.html
@@ -426,6 +426,31 @@
       margin-bottom:0;
       font-style:italic;
     }
+
+    /* Backup Section */
+    .backup-section{
+      margin-top:14px;
+      background:#F3F2EF;
+      border:1px solid #E5E4E1;
+      border-radius:10px;
+      padding:12px;
+      box-shadow:0 1px 3px rgba(0,0,0,0.04);
+    }
+    .backup-section h3{
+      font-size:12px;
+      color:#6B7280;
+      margin-bottom:6px;
+      font-weight:600;
+    }
+    .backup-section p{
+      font-size:10px;
+      color:#6B7280;
+      margin-bottom:10px;
+      line-height:1.4;
+    }
+    .hidden-input{
+      display:none;
+    }
   </style>
 </head>
 <body>
@@ -543,6 +568,16 @@
       </div>
       <div class="results-section" id="tw-results"></div>
     </div>
+
+    <div class="backup-section">
+      <h3>Backup &amp; Restore</h3>
+      <p>Export or import progress so you can resume after reinstalling the extension.</p>
+      <div class="actions">
+        <button class="btn btn-secondary" id="export-progress-btn">⬇ Export</button>
+        <button class="btn btn-secondary" id="import-progress-btn">⬆ Import</button>
+      </div>
+    </div>
+    <input type="file" id="import-file-input" class="hidden-input" accept="application/json">
   </div>
   
   <script src="popup.js"></script>
